--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ h1{
     font-size: 100px;
     color: #FFFFFF;
 }
+h2{
+    font-size: 30px;
+    color: red;
+}
 
 .Guitar{
     transform: translate( 700px, 200px);
@@ -15,4 +19,10 @@ h1{
     position: relative;
     top: 20px;
     right: 500px; ;
+}
+.DragonRight{
+    position: relative;
+    top: 15px;
+    left: 75px; ;
+    width: 650px;
 }
